k8s/Ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ushaflow-web
  annotations:
    kubernetes.io/ingress.class: traefik
    cert-manager.io/cluster-issuer: ushacom
spec:
  rules:
  - host: '*.ui.dialogflow.cloud.ushakov.co'
    http:
      paths:
      - path: /
        backend:
          serviceName: ushaflow-web
          servicePort: http
  - host: '*.web.ushaflow.com'
    http:
      paths:
      - path: /
        backend:
          serviceName: ushaflow-web
          servicePort: http
  tls:
  - hosts:
    - '*.ui.dialogflow.cloud.ushakov.co'
    - '*.web.ushaflow.com'
    secretName: ushaflow-web-cert
